Implement API method for password changing
